[package]
name = "jacarex"
version = "0.1.0"
authors = ["vrmiguel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"
clap      = "2.33.3"
colored   = "2.0.0"
regex     = "1.4.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
